WMT.css: Added "rest-panel-bottom" class. Reformatted "canvas-wrap" to be consistent with other code. index: Added elements to hold REST information. Resolves #42.

--- a/wmt-application-web/src/main/webapp/css/WMT.css
+++ b/wmt-application-web/src/main/webapp/css/WMT.css
@@ -22,7 +22,14 @@
     width: 75px; /* width of coordinate overlay value column */
 }
 
-#canvas-wrap canvas { position:absolute; top:0; left:0; z-index:0 !important; width:100%; height:100% }
+#canvas-wrap canvas { 
+    position: absolute; 
+    top: 0; 
+    left: 0; 
+    z-index: 0 !important; 
+    width: 100%; 
+    height: 75% 
+}
 
 .container-full {
   margin: 0 auto;
@@ -40,3 +47,10 @@
     -o-user-select: none;
     pointer-events: none;
 } 
+
+.rest-panel-bottom {
+    position: absolute;
+    bottom: 0;
+    height: 25%;
+    width: 100%
+}
